@@ -3,6 +3,8 @@ current version
 
 fixed bugs:
 - fixed CTRL-C if NO_SIGACTION is set (e.g., for MinGW)
+- fixed bug that a missing CONSTRANS in constraint handler leads to NULL pointer as constraint data for the
+  copied constraints instead of pointer copies of the consdata (as explained in the constraint handler "HowTo")
 
 
 SCIP version 1.00
